# in-context-function-estimation

./: .gitignore  .pylintrc  README.md  noxfile.py  setup.cfg
src/icfelab/: config.yml  dataset.py  gaussian_process.py  model.py  plot_additional.py  plot_tensorboard.py  read_cepheid.py  sample.py  train.py  trainer.py  utils.py
tests/: test_sampling.py
tests/data/: test_file.xz
