##########################
# Setup.py Configuration #
##########################
[metadata]
name = icfelab
version = 0.0.1-dev
description = in context function estimation
long_description = file: README.md
long_description_content_type = text/markdown

# Author information
author = Christian Schultze

classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Science/Research
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.11
    Topic :: Scientific/Engineering :: Artificial Intelligence

[options]
install_requires =
    torchmetrics
    numpy
    torch
    torchvision
    lightning
    tqdm
    scipy
    matplotlib
    scikit-learn
    torchinfo
    tensorboard

python_requires = >=3.11

packages = find:
package_dir =
    = src

[options.packages.find]
where = src

[options.extras_require]
dev =
    pytest
    nox
    mypy
    pylint
